# lift_coding

./: .dockerignore  .env.example  .env.example.demo  .gitignore  .gitmodules  .handsfree_transport_sessions.json  ARCHITECTURE.md  CODEBASE_INVENTORY.md  CONFIGURATION.md  CONTRIBUTING.md  DOCUMENTATION_ALIGNMENT_PLAN.md  DOCUMENTATION_GAP_ANALYSIS.md  DOCUMENTATION_INDEX.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_NOTIFICATIONS.md  IMPLEMENTATION_SUMMARY_PR052.md  MULTIMODAL_INPUT_IMPLEMENTATION.md  Makefile  PRIVACY_MODES_IMPLEMENTATION.md  PR_CHANGES.md  PR_SUMMARY.md  README.md  SECURITY.md  docker-compose.agent-runner.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
agent-runner/: .gitignore  Dockerfile  README.md  apply_instruction.py  requirements.txt  runner.py
config/: display_webapp_readiness.example.json  display_webapp_readiness.meta_glasses_widget.example.json  policies.yaml
dev/: README.md  reference_mobile_client.py  replay_webhook.py  simulator.html  test_webhook_mapping.py  tts_demo.py
docs/: AGENT_RUNNER_QUICKSTART.md  ARCHITECTURE.md  AUTHENTICATION.md  CONFIGURATION.md  DOCUMENTATION_INDEX.md  GETTING_STARTED.md  MINIMAL_AGENT_RUNNER.md  PACKAGE_GUIDE.md  PR-005-implementation-summary.md  SECRET_STORAGE_AND_SESSIONS.md  TESTING_QUICK_REFERENCE.md  VAULT_SECRET_MANAGER.md  agent-runner-setup.md  android-device-workflow.md  android-emulator-bluetooth-and-ondevice-python.md  android-emulator-setup-linux.md  android-emulator-smoke-workflow.md  android-networking-matrix.md  configuration-reference.md  confirmation-flow.md  database-schema.md  device-smoke-checklist-ios-meta-glasses.md  docker-android-emulator-runner.md  ios-audio-interruption-testing.md  live-github-provider.md  (+38 more)
(+4533 files in other folders)
