[project]
name = "handsfree-dev-companion"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
aws = ["boto3>=1.26.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E402"]  # Allow module-level imports not at top (needed for pytest.importorskip)

[tool.pytest.ini_options]
testpaths = ["tests"]
